--- a/final_portfolio/projects.html
+++ b/final_portfolio/projects.html
@@ -18,14 +18,14 @@
     </nav>
   </header>
   
-  <h1>Highlighted Projects</h1>
+  <h1>Highlighted Work - Nvidia | Sony | Geomagical 💻 </h1>
   <p> The Projects shown below are my most significant contributions up-to-date</p>
   <br>
 
   <main>
 
     <div class="section-container">
-        <h2>GR00T</h2>
+        <h2>GR00T 🤖</h2>
         <p>General-purpose foundation model for humanoid robots, designed to further its work driving breakthroughs in robotics and embodied AI.</p>
         <div class="video-container">
           <iframe src="https://www.youtube.com/embed/Bhg3uOx9ZPw" frameborder="0" allowfullscreen></iframe>
@@ -38,7 +38,7 @@
     </div> <!-- Closing tag for GR00T section-container -->
     
     <div class="section-container">
-        <h2>Marvel's Spiderman</h2>
+        <h2>Marvel's Spiderman 🎮</h2>
         <p>An action-adventure single-player video game played from a third-person perspective. As with the first game and Miles Morales, 
             Peter Parker and Miles Morales are the two main characters, with Mary Jane and Venom playable in certain missions, becoming individually playable in accordance with the story as they traverse an open world New York City and fight enemies.</p>
         <div class="video-container">
@@ -52,7 +52,7 @@
     </div> <!-- Closing tag for Marvel's Spiderman section-container -->
     
     <div class="section-container">
-        <h2>IKEA Place</h2>
+        <h2>IKEA Place 🏠</h2>
         <p>IKEA announces the launch of IKEA Place, an augmented reality (AR) application that lets people confidently experience, experiment and share how good design transforms any space, such as a home, office, school, or studio. From sofas and armchairs to coffee tables, all of the products in IKEA Place are 3D and 
             true to scale so that every choice is just the right size, design, and function.</p>
         <div class="video-container">
